include messages in collapse threads when applying command to top level message, controlled by a pref

--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -481,6 +481,11 @@ headerFieldYou=Sie
 # The what's new tab title, shown on version update
 whatsNew=Neuigkeiten
 
+applyToCollapsedMsgsTitle=Bestätigen Sie das Löschen der Nachrichten in zugeklappten Themen
+applyToCollapsedMsgs=Warnung - Dies wird Nachrichten in zugeklappten Themen löschen
+applyToCollapsedAlwaysAskCheckbox=Immer fragen, bevor Nachrichten in zugeklappten Themen gelöscht werden
+applyNowButton=Ausführen
+
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
 # specific result is present in the search.  Because of how the message grouping
