--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -389,6 +389,12 @@ headerFieldYou = Ja
 
 whatsNew = Spis najważniejszych zmian
 
+applyToCollapsedMsgsTitle          = Potwierdź usuwanie wiadomości w wątkach
+applyToCollapsedMsgs               = Ostrzeżenie - zostaną usunięte wiadomości w wątkach wyświetlanych jako zwinięte
+applyToCollapsedAlwaysAskCheckbox  = Zawsze pytaj przed usuwaniem wiadomości w wątkach wyświetlanych jako zwinięte
+# FIXME (applyNowButton) było Apply
+applyNowButton                     = OK
+
 glodaSearch_results_why_contact    = Kontakt
 glodaSearch_results_why_subject    = Temat
 glodaSearch_results_why_body       = Treść
