comments cleanup (messenger.properties)

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -139,12 +139,11 @@ linesColumnTooltip  = Kliknij, aby posortować według ilości linii
 linesColumnHeader   = Linie
 
 # status feedback stuff
+# FIXME (documentDone) ?
 documentDone=
 documentLoading   = Wczytywanie wiadomości…
 
-# LOCALIZATION NOTE (autosyncProgress): Do not translate the word "%1$S" or "%2$S" below.
-# Place the word %1$S in your translation where the name of the comma separated folders should appear.
-# Place the word %2$S in your translation where the name of the comma separated accounts should appear.
+# autosyncProgress: %1$S - comma separated folders, %2$S - comma separated accounts
 autosyncProgress  = Synchronizowanie wiadomości w folderach: %1$S dla kont: %2$S…
 
 unreadMsgStatus   = Nieprzeczytane: %S
@@ -169,32 +168,31 @@ priorityNormal      = Normalny
 priorityHigh        = Wysoki
 priorityHighest     = Najwyższy
 
-#Group by date thread pane titles
+# Group by date thread pane titles
 today       = Dzisiejsze
 yesterday   = Wczorajsze
 lastWeek    = Z ostatniego tygodnia
 twoWeeksAgo = Sprzed dwóch tygodni
 older       = Starsze wiadomości
 
-#Grouped By Label
+# Grouped By Label
 untaggedMessages = Wiadomości bez etykiety
 
 # Grouped by status
 messagesWithNoStatus = Bez statusu
 
-#Grouped by priority
+# Grouped by priority
 noPriority = Bez priorytetu
 
-#Grouped by has attachments
+# Grouped by has attachments
 noAttachments = Bez załączników
 attachments   = Załączniki
 
-#Grouped by starred
+# Grouped by starred
 notFlagged   = Bez gwiazdki
 groupFlagged = Oznaczone gwiazdką
 
 # defaults descriptions for tag prefs listed in mailnews.js
-# (we keep the .labels. names for backwards compatibility)
 mailnews.tags.remove          = Usuń wszystkie etykiety
 mailnews.labels.description.1 = Ważne
 mailnews.labels.description.2 = Praca
@@ -308,7 +306,6 @@ openWindowWarningText  = Otworzenie %S wiadomości może zająć trochę czasu. 
 # For warning the user that a tag they're trying to create already exists
 tagExists = Etykieta o tej nazwie już istnieje.
 
-# Title of the edit tag dialog
 editTagTitle = Edycja etykiety
 
 # For the virtual folder list dialog title %S is the name of the saved search folder
@@ -318,7 +315,6 @@ editVirtualFolderPropertiesTitle = Edytuj właściwości folderu wyszukiwania %S
 alertNoSearchFoldersSelected = Należy wybrać przynajmniej jeden folder do przeszukiwania.
 
 # These two are displayed in the message and folder pane windows
-# LOCALIZATION NOTES(????ByteAbbreviation): Do not translate %d below, it is the size of the message/folder
 kiloByteAbbreviation=%dKB
 megaByteAbbreviation=%dMB
 
@@ -350,13 +346,11 @@ folderPaneHeader_recent    = Ostatnie foldery
 folderPaneHeader_smart     = Pogrupowane foldery
 smartAccountName           = Pogrupowane foldery
 
-# Copy / Move to Folder Again
 # LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
 # should have the same value as copyToFolderAgainAccessKey as they are the same menu item in the UI
 moveToFolderAgain          = Przenieś ponownie do "%1$S"
 moveToFolderAgainAccessKey = o
 # LOCALIZATION NOTE %1$S is the name of the folder we will copy to copyToFolderAgainAccessKey
-# should have the same value as moveToFolderAgainAccessKey as they are the same menu item in the UI
 copyToFolderAgain          = Kopiuj ponownie do "%1$S"
 copyToFolderAgainAccessKey = o
 
