--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -92,8 +92,8 @@ confirmFolderDeletionForFilter  = Usunięcie folderu "%S" spowoduje zablokowanie
 alertFilterChanged              = Filtry powiązane z tym folderem zostaną zaktualizowane.
 filterDisabled                  = Folder "%S" nie może zostać odnaleziony. Wszystkie filtry powiązane z tym folderem zostaną wyłączone. Sprawdź, czy folder istnieje oraz, czy filtry posiadają poprawną ścieżkę dostępu do folderu.
 filterFolderDeniedLocked        = Pasujące do filtru wiadomości nie mogą zostać zapisane w folderze "%S" ponieważ trwa wykonywanie innej operacji.
-parsingFolderFailed             = Otworzenie folderu %S jest niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
-deletingMsgsFailed              = Usunięcie wiadomości w folderze %S jest niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
+parsingFolderFailed             = Otworzenie folderu %S jest obecnie niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
+deletingMsgsFailed              = Usunięcie wiadomości z folderu %S jest obecnie niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
 alertFilterCheckbox             = Nie wyświetlaj tego ostrzeżenia ponownie.
 compactFolderDeniedLock         = Uporządkowanie folderu "%S" było niemożliwe, ponieważ wykonywana jest inna operacja. Spróbuj ponownie później.
 compactFolderWriteFailed        = Uporządkowanie folderu "%S" było niemożliwe, ponieważ operacja zapisywania danych w folderze nie powiodła się. Należy upewnić się, że dostępna jest wystarczająca ilość miejsca na dysku oraz, że posiadane są wymagane prawa zapisu do systemu plików, a następnie spróbować ponownie.
