--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -277,6 +277,11 @@ windowTitlePrefix=Verfassen:
 ## String used by the dialog that ask the user to enter a subject
 sendMsgTitle=Nachricht senden
 subjectDlogMessage=Sie haben keinen Betreff für diese Nachricht angegeben. Wenn Sie doch einen Betreff angeben wollen, geben Sie ihn bitte jetzt ein.
+## String used by the empty subject dialog
+subjectEmptyTitle=Betreff-Erinnerung
+subjectEmptyMessage=Ihre Nachricht hat keinen Betreff.
+sendWithEmptySubjectButton=Ohne Betreff &senden
+cancelSendingButton=Senden a&bbrechen
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Dieses Konto unterstützt nur E-Mail-Empfänger. Newsgruppen werden ignoriert.
