l10n for bug 367698 - avoid pre-populating "(no subject)" text in subject box

--- a/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -152,8 +152,10 @@ saveDlogMessage = Wiadomość nie została wysłana. Czy zapisać ją w folderze
 defaultSubject     = (bez tematu)
 chooseFileToAttach = Załącz plik do tej wiadomości
 windowTitlePrefix  = Tworzenie:
-sendMsgTitle       = Wyślij wiadomość
-subjectDlogMessage = Nie podano tematu wysyłanej wiadomości. Wprowadź temat w pole poniżej lub wyślij bez tematu.
+subjectEmptyTitle          = Brak tematu
+subjectEmptyMessage        = Wysyłana wiadomość nie posiada tematu.
+sendWithEmptySubjectButton = &Wyślij bez tematu
+cancelSendingButton        = &Anuluj wysyłanie
 
 recipientDlogMessage = Z tego konta można wysyłać wiadomości jedynie na adresy e-mail. Próby wysłania wiadomości na serwery grup dyskusyjnych zostaną zignorowane.
 
