L10n for: Bug 448288 - include messages in collapse threads when applying command to top level message, controlled by a pref

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -422,3 +422,9 @@ processingJunkMessages=Przetwarzanie niechcianych wiadomości
 fileNotFoundTitle=Nie odnaleziono pliku
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg=Plik %S nie istnieje.
+
+applyToCollapsedMsgsTitle=Potwierdź zamiar usunięcia wiadomości w zwiniętych wątkach
+applyToCollapsedMsgs=Ostrzeżenie - ta czynność spowoduje usunięcie wiadomości w zwiniętych wątkach
+applyToCollapsedAlwaysAskCheckbox=Zawsze pytaj przed usuwaniem wiadomości w zwiniętych wątkach
+applyNowButton=Zastosuj
+
