L10n for bug 448288 - Include messages in collapse threads when applying command to top level message, controlled by a pref.

--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -486,6 +486,11 @@ headerFieldYou=Dig
 # The what's new tab title, shown on version update
 whatsNew=Vad är nytt
 
+applyToCollapsedMsgsTitle=Bekräfta borttagning av meddelanden i ihopfällda trådar
+applyToCollapsedMsgs=Varning - meddelanden i ihopfällda trådar kommer att tas bort
+applyToCollapsedAlwaysAskCheckbox=Fråga alltid innan meddelanden tas bort i ihopfällda trådar
+applyNowButton=Verkställ
+
 #LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
 # glodaWhyColumn when performing a gloda-backed search, explaining why a
 # specific result is present in the search.  Because of how the message grouping
