L10n for bug 367698 - Avoid pre-populating "(no subject)" text in subject box.

--- a/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -276,9 +276,11 @@ chooseFileToAttach=Bifoga fil(er)
 ##
 windowTitlePrefix=Skriv:
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Skicka meddelande
-subjectDlogMessage=Du har inte angivit något ämne för detta meddelande. Du bör verkligen skriva in vilket ämne meddelandet rör.
+## String used by the empty subject dialog
+subjectEmptyTitle=Ämnespåminnelse
+subjectEmptyMessage=Ditt meddelande har inget angivet ämne.
+sendWithEmptySubjectButton=&Sänd utan ämne
+cancelSendingButton=&Avbryt sändandet
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Det här kontot stöder endast e-postmottagare. Om du fortsätter kommer diskussionsgrupperna att ignoreras.
