--- a/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,9 +274,11 @@ chooseFileToAttach=Joindre les fichiers
 ##
 windowTitlePrefix=Rédaction :
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Envoyer le message
-subjectDlogMessage=Vous n'avez pas spécifié de sujet à votre message. Si vous voulez lui en donner un, faites-le maintenant.
+## String used by the empty subject dialog
+subjectEmptyTitle=Rappel de sujet
+subjectEmptyMessage=Votre message n'a pas de sujet.
+sendWithEmptySubjectButton=&Envoyer sans message
+cancelSendingButton=&Annuler l'envoi
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Ce compte ne supporte que les destinataires de type courrier électronique. En continuant, les groupes seront ignorés.
