--- a/et/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/et/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -246,7 +246,7 @@
 12587=Sinu poolt teele saadetud kirja suurus ületab üldise suuruspiirangu (%d baiti). Kirja ei saadetud, proovi selle suurust vähendada ja siis uuesti saata.
 
 ## @name NS_ERROR_SMTP_PERM_SIZE_EXCEEDED_2
-12588=Sinu poolt teele saadetud kirja suurus ületab üldise suuruspiirangu. Kirja ei saaadetud, proovi selle suurust vähendada ja siis uuesti saata. Server vastas:  %s.
+12588=Sinu poolt teele saadetud kirja suurus ületab üldise suuruspiirangu. Kirja ei saadetud, proovi selle suurust vähendada ja siis uuesti saata. Server vastas:  %s.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_UNKNOWN_SERVER
 12589=Kirja saatmisel esines viga: SMTP server %S on tundmatu. Server võib olla valesti seadistatud. Palun kontrolli oma SMTP serveri sätete korrektsust ja proovi uuesti.
