--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -277,8 +277,8 @@ windowTitlePrefix=Verfassen:
 ## String used by the empty subject dialog
 subjectEmptyTitle=Betreff-Erinnerung
 subjectEmptyMessage=Ihre Nachricht hat keinen Betreff.
-sendWithEmptySubjectButton=Ohne Betreff &senden
-cancelSendingButton=Senden a&bbrechen
+sendWithEmptySubjectButton=&Ohne Betreff senden
+cancelSendingButton=&Nicht senden
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Dieses Konto unterstützt nur E-Mail-Empfänger. Newsgruppen werden ignoriert.
