Aviary.pl Bug 1790 - Nie pokazuj wiecej tego DIALOGU

--- a/pl/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/pl/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -302,7 +302,7 @@ initErrorDlogMessage=Podczas tworzenia okna nowej wiadomości wystąpił błąd.
 SaveDialogTitle=Zapisz wiadomość
 ## LOCALIZATION NOTE (SaveDialogMsg): %1$S is folder name, %2$S is host name
 SaveDialogMsg=Twoja wiadomość została zapisana do folderu %1$S w %2$S.
-CheckMsg=Nie pokazuj więcej tego okna dialogowego.
+CheckMsg=Nie pytaj ponownie.
 
 ## Strings used by prompt when Quitting while in progress
 quitComposeWindowTitle=Wysyłanie wiadomości
