--- a/pl/suite/chrome/common/permissions/permissionsManager.properties
+++ b/pl/suite/chrome/common/permissions/permissionsManager.properties
@@ -1,8 +1,8 @@
 installpermissionstext=Możesz zdecydować, które witryny mogą instalować dodatki i uaktualnienia. Podaj dokładny adres witryny, której chcesz na to zezwolić i naciśnij Zezwól.
 installpermissionstitle=Uprawnione witryny - Instalacja oprogramowania
 installpermissionshelp=advanced_pref_installation
-popuppermissionstext=Możesz zdecydować, które witryny mogą otwierać wyskakujące okienka. Podaj dokładny adres witryny, której chcesz na to zezwolić i naciśnij Zezwól.
-popuppermissionstitle=Uprawnione witryny - Wyskakujące okienka
+popuppermissionstext=Możesz zdecydować, które witryny mogą otwierać wyskakujące okna. Podaj dokładny adres witryny, której chcesz na to zezwolić i naciśnij Zezwól.
+popuppermissionstitle=Uprawnione witryny - Wyskakujące okna
 popuppermissionshelp=pop_up_blocking
 imagepermissionstext=Możesz zdecydować, którym witrynom zezwolić na wyświetlanie obrazków. Podaj dokładny adres witryny i naciśnij Zablokuj lub Zezwól.
 imagepermissionstitle=Wyjątki - Obrazki
