Aviary.pl Bug 2045 - problems with ChatZilla translations; Also:  unifying the translation of 'motif'

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -764,7 +764,7 @@ msg.err.unknown.channel=Nieznany kanał "%S".
 msg.err.unknown.user=Nieznany użytkownik ``%S''. 
 msg.err.unknown.command=Nieznana komenda ``%S''.
 msg.err.unknown.stalk=%S nie jest słowem monitorowanym. 
-msg.err.unknown.motif=Nieznany motyw ``%S''. 
+msg.err.unknown.motif=Nieznany schemat ``%S''. 
 msg.err.invalid.charset=Nieprawidłowe kodowanie znaków "%S". 
 msg.err.improper.view=Komenda "%S" nie może być użyta w tej karcie. 
 msg.err.not.connected=Nie połączony. 
@@ -938,7 +938,7 @@ msg.current.css=<%S> jest teraz domyślnym schematem kolorów.
 msg.current.css.net=<%S> jest teraz domyślnym schematem kolorów dla tej sieci. 
 msg.current.css.chan=<%S> jest teraz domyślnym schematem kolorów dla tego kanału. 
 msg.current.css.user=<%S> jest teraz domyślnym schematem kolorów dla tego użytkownika. 
-msg.no.dynamic.style=Przepraszamy, ale Twoja wersja programu &brandShortName; nie wspiera zmiany stylu całej aplikacji. Ta funkcjonalność zostanie teraz wyłączona.
+msg.no.dynamic.style=Przepraszamy, ale Twoja wersja programu &brandShortName; nie wspiera zmiany schematu kolorów dla całej aplikacji. Ta funkcjonalność zostanie teraz wyłączona.
 msg.subscript.loaded=Podskrypt <%1$S> został wczytany z rezultatem "%2$S". 
 msg.user.info=Domyślny pseudonim, "%S", nazwa użytkownika "%S", oraz informacje dodatkowe "%S". 
 msg.connection.info="%S: Użytkownik %S połączony poprzez %S:%S (serwer %S). 
@@ -1204,7 +1204,7 @@ msg.test.quote=Przykładowa wiadomość z ``cudzysłowem''.
 
 msg.welcome=Witaj w ChatZilli…\nPoniżej znajdują się wybrane informacje, które pomogą rozpocząć pracę z ChatZillą.
 msg.welcome.url=Ponieważ ChatZilla została uruchomiona przez URL, to URL celu został otwarty. Można go znaleźć na pasku kart obok karty tego kanału. 
-msg.tabdnd.drop=Czy chcesz określić plik "%S" jako nowe źródło stylów Chatzilli? 
+msg.tabdnd.drop=Czy chcesz określić plik "%S" jako nowe źródło schematów kolorów dla ChatZilli? 
 msg.default.status=Witamy w ChatZilli! 
 
 msg.closing=Przerywanie połączenia z IRC. Kliknij ponownie Zamknij aby zakończyć teraz. 
@@ -1434,7 +1434,7 @@ pref.activityFlashDelay.label=Włącz opóźnienie mrugania
 pref.activityFlashDelay.help=Jeśli w karcie której zawartość uległa już zmianie, ponownie coś się zmieniło, karta ta zaczyna mrugać. Wartość opcji ustawia czas trwania mrugnięcia w milisekundach, 0 wyłącza. 
 pref.aliases.label=Aliasy poleceń 
 pref.aliases.help=Umożliwia tworzenie skrótów do różnych komend lub sekwencji komend. Każdy alias ma postać "<nazwa> = <lista-komend>". "lista-komend" jest listą komend (bez poprzedzającego "/") razem z ich parametrami. Komendy rozdzielane są średnikiem ";". Przy uruchamianiu ChatZilli nazwa aliasu automatycznie staje się komendą.
-pref.autoAwayCap.label=Limit użytkowników kanału dla którego będzie automatycznie sprawdzana obecność wszystkich użytkowników. 
+pref.autoAwayCap.label=Limit użytkowników kanału, dla którego będzie automatycznie sprawdzana obecność wszystkich użytkowników. 
 pref.autoAwayCap.help=ChatZilla automatycznie sprawdza którzy użytkownicy są aktywni. Dla dużych kanałów może to powodować znaczne opóźnienia. Określa maksymalną liczbę użytkowników kanału który będzie sprawdzany. 
 pref.autoAwayPeriod.label=Czas sprawdzania statusu automatycznej nieobecności 
 pref.autoAwayPeriod.help=ChatZilla automatycznie sprawdza którzy użytkownicy są dostępni i aktywni na każdym kanale, którego jesteś członkiem. Wartość opcji określa w minutach czas pomiędzy kolejnymi sprawdzaniami. 
@@ -1473,7 +1473,7 @@ pref.dcc.autoAccept.list.help=Lista pseudonimów, od których będą automatyczn
 pref.dcc.downloadsFolder.label=Folder na pobrane pliki 
 pref.dcc.downloadsFolder.help=Określa domyślne położenie dla plików odebranych za pomocą DCC. 
 pref.dcc.listenPorts.label=Porty dla połączeń 
-pref.dcc.listenPorts.help=Lista numerów portów na które mogą łączyć się inni użytkownicy. Można określać pojedyncze numery lub zakresy "dół-góra". Aby użyć automatycznie przydzielanych numerów, należy zostawić wartość pustą. Przy każdej ofercie połączenia DCC do innego użytkownika przydzielany jest kolejny wolny port. 
+pref.dcc.listenPorts.help=Lista numerów portów, na które mogą łączyć się inni użytkownicy. Można określać pojedyncze numery lub zakresy "dół-góra". Aby użyć automatycznie przydzielanych numerów, należy zostawić wartość pustą. Przy każdej ofercie połączenia DCC do innego użytkownika przydzielany jest kolejny wolny port. 
 pref.dcc.useServerIP.label=Użyj IP serwera 
 pref.dcc.useServerIP.help=Kiedy opcja jest włączona, ChatZilla użyje adresu IP przy połączeniu. Pozwala to używać poprawnego adresu IP przy połączeniu przez bramę lub NAT 
 pref.debugMode.label=Tryb usuwania błędów 
@@ -1615,7 +1615,7 @@ pref.sound.user.stalk.help=
 pref.stalkWholeWords.label=Tylko całe słowa kluczowe 
 pref.stalkWholeWords.help=Ta preferencja przełącza zarządzanie obserwowanymi przez ChatZillę słowami pomiędzy odnajdywaniem pasujących słów a prostym wyszukiwaniem łańcuchów znaków. Przykładowo, "ChatZilla jest super" będzie dopasowane do słowa "zilla" tylko jeżeli ta preferencja zostanie wyłączona.
 pref.stalkWords.label=Słowa kluczowe 
-pref.stalkWords.help=Lista słów które powodują, że Chatzilla zaznacza linię jako "ważną" (jeśli linia zawiera choć jedno słowo z listy), a następnie próbuje zwrócić uwagę użytkownika, jeśli opcja "Zwracanie uwagi" jest włączona. 
+pref.stalkWords.help=Lista słów, które powodują zaznaczanie linii jako "ważnej" (jeśli linia zawiera choć jedno słowo z listy) jak i zwrócenie uwagi użytkownikowi, jeśli opcja "Zwracanie uwagi" jest włączona.
 pref.urls.store.max.label=Liczba przechowywanych adresów URL 
 pref.urls.store.max.help=Określa maksymalną ilość adresów URL zbieranych i przechowywanych przez ChatZillę. Polecenie "/urls" wyświetla 10 napotkanych ostatnio adresów lub więcej (np. "/urls 20") 
 pref.userlistLeft.label=Wyświetla listę użytkowników z lewej strony 
@@ -1635,7 +1635,7 @@ pref.group.general.ident.label=Identyfikacja
 pref.group.general.log.label=Dzienniki 
 pref.group.appearance.label=Wygląd 
 pref.group.appearance.misc.label=Różne 
-pref.group.appearance.motif.label=Motywy 
+pref.group.appearance.motif.label=Schematy kolorów
 pref.group.appearance.timestamps.label=Znaczniki czasu 
 pref.group.appearance.timestamps.help=Preferencja formatu używa zamienników strftime. Przykładowo, "%A %l:%M:%S%P" może przybrać postać "Czwartek 1:37:42pm".
 pref.group.appearance.userlist.label=Lista użytkowników 
@@ -1702,9 +1702,9 @@ pref.timestamps.display.help=
 pref.timestamps.label=Włączone 
 pref.timestamps.help=
 
-pref.msgBeep.label==Dźwięki, nowe okno prywatnej rozmowy 
+pref.msgBeep.label=Nowy widok zapytań
 pref.msgBeep.help=
-pref.queryBeep.label=Dźwięki, prywatna wiadomość 
+pref.queryBeep.label=Pytanie
 pref.queryBeep.help=
 pref.stalkBeep.label=Ważna wiadomość 
 pref.stalkBeep.help=
