Localize changes from bug 448288 the same way like in Thunderbird

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -423,8 +423,8 @@ fileNotFoundTitle=Nie odnaleziono pliku
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg=Plik %S nie istnieje.
 
-applyToCollapsedMsgsTitle=Potwierdź zamiar usunięcia wiadomości w zwiniętych wątkach
-applyToCollapsedMsgs=Ostrzeżenie - ta czynność spowoduje usunięcie wiadomości w zwiniętych wątkach
-applyToCollapsedAlwaysAskCheckbox=Zawsze pytaj przed usuwaniem wiadomości w zwiniętych wątkach
-applyNowButton=Zastosuj
+applyToCollapsedMsgsTitle=Potwierdź usuwanie wiadomości w wątkach
+applyToCollapsedMsgs=Ostrzeżenie - zostaną usunięte wiadomości w wątkach wyświetlanych jako zwinięte
+applyToCollapsedAlwaysAskCheckbox=Zawsze pytaj przed usuwaniem wiadomości w wątkach wyświetlanych jako zwinięte
+applyNowButton=OK
 
