--- a/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -277,7 +277,7 @@ windowTitlePrefix=Rédaction :
 ## String used by the empty subject dialog
 subjectEmptyTitle=Rappel de sujet
 subjectEmptyMessage=Votre message n'a pas de sujet.
-sendWithEmptySubjectButton=&Envoyer sans message
+sendWithEmptySubjectButton=&Envoyer sans sujet
 cancelSendingButton=&Annuler l'envoi
 
 ## String used by the dialog that informs the user about the newsgroup recipient
