L10n for: Bug 491310 - Port changes in the new Firefox Page Info implementation, Part 1 (suite)

--- a/pl/suite/chrome/browser/pageInfo.properties
+++ b/pl/suite/chrome/browser/pageInfo.properties
@@ -58,6 +58,8 @@ mediaFileSize=%S KB
 mediaSize=%Spx \u00D7 %Spx
 mediaSelectFolder=Wybierz folder do zapisu obrazków
 mediaBlockImage=Blokuj obrazki z witryny %S
+mediaImageType=Obrazek %S
+mediaAnimatedImageType=Obrazek %S (animowany, liczba klatek: %S)
 
 generalQuirksMode=Tryb wstecznej zgodności
 generalStrictMode=Tryb standardów
@@ -91,7 +93,6 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Ta witryna dostarcza certyfikat umożliwiający potwierdzenie jej tożsamości
-securityNoIdentity=Ta witryna nie dostarcza informacji na temat swej tożsamości
+securityNoOwner=Ta witryna nie dostarcza informacji o swoich właścicielach.
 securityOneVisit=Tak, raz
 securityNVisits=Tak, %S razy
