--- a/pl/suite/chrome/common/notification.properties
+++ b/pl/suite/chrome/common/notification.properties
@@ -23,8 +23,14 @@ xpinstallDisabledButton=Włącz
 xpinstallDisabledButton.accesskey=c
 
 # Geolocation UI
-geolocation.tellThem=Przekaż informacje
-geolocation.tellThemKey=e
-geolocation.dontTellThem=Nie przekazuj
-geolocation.dontTellThemKey=N
+# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
+#If you're having trouble with the word Share, please use Allow and Block in your language.
+geolocation.shareLocation=Udostępnij położenie
+geolocation.shareLocation.accesskey=e
+geolocation.dontShareLocation=Nie udostępniaj
+geolocation.dontShareLocation.accesskey=N
 geolocation.siteWantsToKnow=%S chce poznać położenie geograficzne użytkownika.
+# LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
+# or use "..." unless \u2026 doesn't suit traditions in your locale.
+geolocation.learnMore=Więcej informacji…
+geolocation.remember=Zapamiętaj dla tej witryny
