Fix UTF-8 encoding error

--- a/de/mail/chrome/messenger/multimessageview.properties
+++ b/de/mail/chrome/messenger/multimessageview.properties
@@ -2,10 +2,10 @@
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of messages
 # example: Selected: 23 messages
-selectedNMessages=Ausgewählt: #1 Nachricht;Ausgewählt: #1 Nachrichten
+selectedNMessages=AusgewÃ¤hlt: #1 Nachricht;AusgewÃ¤hlt: #1 Nachrichten
 # #1 number of threads
 # example: across 3 threads
-acrossNThreads= über #1 Thema; über #1 Themen
+acrossNThreads= Ã¼ber #1 Thema; Ã¼ber #1 Themen
 
 numMsgs=#1 Nachricht;#1 Nachrichten
 countUnread=, #1 ungelesene;, #1 ungelesene
@@ -14,6 +14,6 @@ Nmessages=(#1 Nachricht);(#1 Nachrichten)
 noSubject=(kein Betreff)
 
 # thread and multiple message selection summaries
-messagesSize=Diese Nachrichten benötigen: #1 #2
+messagesSize=Diese Nachrichten benÃ¶tigen: #1 #2
 yesterday=gestern
-noticeText= (Hinweis: #1 Nachrichten sind ausgewählt, die ersten #2 werden angezeigt)
+noticeText= (Hinweis: #1 Nachrichten sind ausgewÃ¤hlt, die ersten #2 werden angezeigt)
