Adding a missing string from Bug 440794.

--- a/fr/mail/chrome/messenger/activity.properties
+++ b/fr/mail/chrome/messenger/activity.properties
@@ -18,11 +18,11 @@ sendingMessages=Envoi des messages
 # LOCALIZATION NOTE (sendingMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sendingMessage=Envoi d'un message
 sendingMessageWithSubject=Envoi du message : %S
+copyMessage=Copie du message dans le dossier « Envoyés »
 sentMessage=Message envoyé
 # LOCALIZATION NOTE (sentMessageWithSubject): %S will be replaced by the subject of the message being sent.
 sentMessageWithSubject=Message envoyé à : %S
 failedToSendMessage=Échec d'envoi d'un message
-
 failedToCopyMessage=Échec de la copie d'un message
 # LOCALIZATION NOTE (failedToSendMessageWithSubject): %S will be replaced by the subject of the message being sent.
 failedToSendMessageWithSubject=Échec de l'envoi du message : %S
