--- a/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,9 +274,11 @@ chooseFileToAttach=Zadejte soubor pro přílohu
 ##
 windowTitlePrefix=Psaní zprávy:
 
-## String used by the dialog that ask the user to enter a subject
-sendMsgTitle=Odesílání zprávy
-subjectDlogMessage=U této zprávy nebyl zadán žádný předmět. Pokud jej chcete zadat, napište jej prosím teď.
+## String used by the empty subject dialog
+subjectEmptyTitle=Upozornnění na prázdný předmět
+subjectEmptyMessage=Odesílaná zpráva nemá zadaný žádný předmět.
+sendWithEmptySubjectButton=&Odeslat bez předmětu
+cancelSendingButton=&Zrušit odesílání
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Tento účet podporuje pouze e-mail. Při pokračování budou ignorovány diskusní skupiny.
